feat: 重构前后端架构，完善评论系统与管理功能
- 规范化前后端组件与路径命名，清理冗余代码与废弃视图。
- 引入 Mybatis-Plus 与 OpenAPI，实现评论、点赞、举报及敏感词过滤功能。
- 更新数据库初始化脚本，新增评论系统迁移及回滚方案。
- 完善账号管理、权限校验与图片上传服务逻辑。